# python-terminalizer2asciinema

./: Makefile  README.md  pyproject.toml  release.env  sonar-project.properties
.github/workflows/: build.yaml  deploy-github-release-assets.yml  deploy-pypi.yml  quality-qltysh.yml  quality-sonarcloud.yml  workflow-deployments.yml
scripts/: set-version.sh
src/terminalizer2asciinema/: cli.py  terminalizer2asciinema.py  util.py
tests/: test_cli.py  test_terminalizer2asciinema.py  test_util.py
tests/test-data/: expected-output.txt  test-data.yml
